tests/baselines/reference/classImplementsClass5.errors.txt
tests/cases/compiler/classImplementsClass5.ts(5,7): error TS2720: Class 'C' incorrectly implements class 'A'. Did you mean to extend 'A' and inherit its members as a subclass?
  Types have separate declarations of a private property 'x'.
tests/cases/compiler/classImplementsClass5.ts(16,1): error TS2322: Type 'C2' is not assignable to type 'C'.
  Types have separate declarations of a private property 'x'.
tests/cases/compiler/classImplementsClass5.ts(17,1): error TS2322: Type 'C' is not assignable to type 'C2'.
  Types have separate declarations of a private property 'x'.


==== tests/cases/compiler/classImplementsClass5.ts (3 errors) ====
    class A {
        private x = 1;
        foo(): number { return 1; }
    }
    class C implements A {
          ~
!!! error TS2720: Class '{|C|0|}' incorrectly implements class '{|A|1|}'. Did you mean to extend '{|A|2|}' and inherit its members as a subclass?
!!! error TS2720:   Types have separate declarations of a private property 'x'.
!!! annotated symbol 0 tests/cases/compiler/classImplementsClass5.ts:5:7
!!! annotated symbol 1 tests/cases/compiler/classImplementsClass5.ts:1:7
!!! annotated symbol 2 tests/cases/compiler/classImplementsClass5.ts:1:7
        private x = 1;
        foo() {
            return 1;
        }
    }
    
    class C2 extends A {}
    
    var c: C;
    var c2: C2;
    c = c2;
    ~
!!! error TS2322: Type '{|C2|0|}' is not assignable to type '{|C|1|}'.
!!! error TS2322:   Types have separate declarations of a private property 'x'.
!!! annotated symbol 0 tests/cases/compiler/classImplementsClass5.ts:12:7
!!! annotated symbol 1 tests/cases/compiler/classImplementsClass5.ts:5:7
    c2 = c;
    ~~
!!! error TS2322: Type '{|C|0|}' is not assignable to type '{|C2|1|}'.
!!! error TS2322:   Types have separate declarations of a private property 'x'.
!!! annotated symbol 0 tests/cases/compiler/classImplementsClass5.ts:5:7
!!! annotated symbol 1 tests/cases/compiler/classImplementsClass5.ts:12:7